; ModuleID = '/home/carl/AnghaBench/HandBrake/libhb/extr_hb_dict.c_xform_null.c'
source_filename = "/home/carl/AnghaBench/HandBrake/libhb/extr_hb_dict.c_xform_null.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [1 x i8] zeroinitializer, align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32)* @xform_null to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @xform_null(i32 %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  switch i32 %4, label %5 [
    i32 129, label %6
    i32 132, label %8
    i32 130, label %10
    i32 131, label %12
    i32 128, label %14
  ]

5:                                                ; preds = %1
  br label %6

6:                                                ; preds = %1, %5
  %7 = call i32* (...) @json_null()
  store i32* %7, i32** %2, align 8
  br label %16

8:                                                ; preds = %1
  %9 = call i32* (...) @json_false()
  store i32* %9, i32** %2, align 8
  br label %16

10:                                               ; preds = %1
  %11 = call i32* @json_integer(i32 0)
  store i32* %11, i32** %2, align 8
  br label %16

12:                                               ; preds = %1
  %13 = call i32* @json_real(double 0.000000e+00)
  store i32* %13, i32** %2, align 8
  br label %16

14:                                               ; preds = %1
  %15 = call i32* @json_string(i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str, i64 0, i64 0))
  store i32* %15, i32** %2, align 8
  br label %16

16:                                               ; preds = %14, %12, %10, %8, %6
  %17 = load i32*, i32** %2, align 8
  ret i32* %17
}

declare dso_local i32* @json_null(...) #1

declare dso_local i32* @json_false(...) #1

declare dso_local i32* @json_integer(i32) #1

declare dso_local i32* @json_real(double) #1

declare dso_local i32* @json_string(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
